<?xml version="1.0" encoding="utf-8"?>
<TabHost
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:id="@android:id/tabhost">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical">
		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0.0dip"
			android:layout_weight="1.0" />
		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_weight="0.0"
			android:visibility="gone" />
		<RadioGroup
		    android:id="@+id/radioGroup"
			android:gravity="center_vertical"
			android:layout_gravity="bottom"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:background="@drawable/tab_bar">
			<RadioButton
				android:tag="radio_button0"
				android:text="@string/index"
				android:drawableTop="@drawable/icon_home_bg"
				style="@style/t_main_tab_bottom" />
			<RadioButton
				android:tag="radio_button1"
				android:text="@string/channel"
				android:drawableTop="@drawable/icon_channel_bg"
				style="@style/t_main_tab_bottom" />
			<RadioButton
				android:tag="radio_button2"
				android:text="@string/search"
				android:drawableTop="@drawable/icon_search_bg"
				style="@style/t_main_tab_bottom" />
			<RadioButton
			    android:id="@+id/recommend_ad"
				android:tag="radio_button3"
				android:text="@string/downloadwatch"
				android:drawableTop="@drawable/icon_download_bg"
				style="@style/t_main_tab_bottom"
				android:visibility="gone" />
			<RadioButton
				android:tag="radio_button4"
				android:text="@string/more"
				android:drawableTop="@drawable/icon_more_bg"
				style="@style/t_main_tab_bottom" />
		</RadioGroup>
	</LinearLayout>
</TabHost>
