<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/upload_dialog_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center" android:background="@color/upload_dialog_title" android:layout_width="fill_parent" android:layout_height="50.0dip" android:text="@string/uploadVideo" />
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/uploaddiloag_shoot_video" android:background="@drawable/search_activity_list_item_bg" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/shootingVideo" android:drawableLeft="@drawable/ic_video" android:drawablePadding="20.0dip" />
    <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/list_divider_line" />
    <TextView android:textSize="18.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:id="@id/uploaddiloag_local_video" android:background="@drawable/search_activity_list_item_bg" android:paddingLeft="40.0dip" android:paddingRight="40.0dip" android:layout_width="fill_parent" android:layout_height="60.0dip" android:text="@string/chooseLocalVideo" android:drawableLeft="@drawable/ic_local" android:drawablePadding="20.0dip" />
</LinearLayout>
