<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/black_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:background="@drawable/title_bar_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/uploadVideoButton" android:background="@drawable/btn_red_long_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/uploadVideo" />
        <TextView android:textSize="@dimen/preload_title_text_size" android:textColor="@color/white" android:gravity="center" android:paddingRight="10.0sp" android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/uploadtitle" android:layout_weight="1.0" />
        <Button android:textSize="16.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/uploadVideoEditButton" android:background="@drawable/btn_red_long_bg" android:paddingLeft="10.0sp" android:paddingRight="10.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:background="@drawable/loginbar_bg" >
        <Button
            android:id="@+id/myUpload"
            android:layout_width="106.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:gravity="center"
            android:text="@string/myUpload"
            android:textColor="@color/white"
            android:textSize="14.0sp" />
        <ImageView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:src="@drawable/divideline"
            android:layout_marginTop="7dip"
            />
        <Button
            android:id="@+id/localUpload"
            android:layout_width="106.0dip"
            android:layout_height="40.0dip"
            android:layout_weight="1"
            android:background="@drawable/transparent"
            android:gravity="center"
            android:text="@string/localUploadTask"
            android:textColor="@color/white"
            android:textSize="14.0sp" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/relaActiveBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dip"
        android:background="@drawable/transparent" >
        <ImageView
            android:id="@+id/my_upload_img"
            android:layout_width="110.0dip"
            android:layout_height="15.0dip"
            android:layout_marginLeft="20.0dip"
            android:contentDescription="@string/desc"
            android:src="@drawable/active" />
        <ImageView
            android:id="@+id/local_upload_img"
            android:layout_width="110.0dip"
            android:layout_height="15.0dip"
            android:layout_marginLeft="189.0dip"
            android:contentDescription="@string/desc"
            android:src="@drawable/active"
            android:visibility="gone" />
        <ImageView
            android:id="@id/imgLineRed"
            android:layout_width="fill_parent"
            android:layout_height="5.0dip"
            android:layout_marginTop="5.0dip"
            android:background="@drawable/bar_line_red"
            android:contentDescription="@string/desc" />
    </RelativeLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <!-- <com.sohu.sohuvideo.widget.HeaderPullListView android:id="@id/upload_listview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:listSelector="#00000000" android:cacheColorHint="#00000000" android:divider="@drawable/line" /> -->
        <ScrollView
        android:id="@+id/scrollView_new"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingTop="1.0px" >
        <LinearLayout
            android:id="@+id/uploadVideoList"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    	</ScrollView>
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/upload_no_data_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:src="@drawable/ic_upload_big" />
            <TextView android:textSize="18.0sp" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/upload_no_data" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
