<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bgbitmap" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/titlebar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlebar"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/more_favorite"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg" >

            <TextView
                style="@style/setting_tv_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/more_favorite"
                android:focusableInTouchMode="true"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/favorites" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />

        <RelativeLayout
            android:id="@+id/more_history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg" >

            <TextView
                style="@style/setting_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/more_history"
                android:text="@string/history" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />
        <!--
             <RelativeLayout
            android:id="@+id/more_upload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg" >
            <TextView
                style="@style/setting_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/more_upload"
                android:text="@string/myupload" />
        </RelativeLayout> 
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />
        -->

        <RelativeLayout
            android:id="@+id/more_feedback"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg" >

            <TextView
                style="@style/setting_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/more_feedback"
                android:text="@string/feedback" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />

        <RelativeLayout
            android:id="@+id/more_about"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg" >

            <TextView
                style="@style/setting_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/more_about"
                android:text="@string/more_declare" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />

        <RelativeLayout
            android:id="@+id/more_live"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/group_bg"
            android:gravity="center"
            android:padding="5.0dip" >

            <TextView
                style="@style/setting_tv_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/more_live"
                android:textColor="@color/red"
                android:textSize="20.0sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/list_divider_line" />
    </LinearLayout>

</RelativeLayout>